@@ -50,6 +50,17 @@
         </td>
         <td valign="top" align="center">No</td>
       </tr>
+      <tr>
+        <td valign="top">backtrace</td>
+        <td valign="top">
+          This controls the error traceback if they is an
+          error detected when running the macro. If this is
+          set to true, there will be an erro trackback, if false
+          there will not be one. The default value is true.
+          <em>Since ant 1.7</em>.
+        </td>
+        <td valign="top" align="center">No</td>
+      </tr>
     </table>
       <h3>Parameters specified as nested elements</h3>
     <h4>attribute</h4>
