@@ -18,6 +18,7 @@
 package org.apache.tools.ant.taskdefs;
 
 import org.apache.tools.ant.BuildFileTest;
+import org.apache.tools.ant.BuildException;
 import org.apache.tools.ant.Project;
 import org.apache.tools.ant.Task;
 
@@ -127,6 +128,23 @@ public class MacroDefTest extends BuildFileTest {
             "implicit.explicit",
             "Only one element allowed when using implicit elements",
             "Only one element allowed when using implicit elements");
+    }
+
+    public void testBackTraceOff() {
+        try {
+            executeTarget("backtraceoff");
+        } catch (BuildException ex) {
+            if (ex.getMessage().indexOf("following error occurred") != -1) {
+                fail("error message contained backtrace - " + ex.getMessage());
+            }
+        }
+    }
+
+    public void testBackTrace() {
+        expectBuildExceptionContaining(
+            "backtraceon",
+            "Checking if a back trace is created",
+            "following error occurred");
     }
 }
 
